wofi/Code/logs/20251102T213208/window2/exthost/output_logging_20251102T215158/6-Prettier.log
["INFO" - 21:52:06] Extension Name: esbenp.prettier-vscode.
["INFO" - 21:52:06] Extension Version: 11.0.0.
["ERROR" - 21:52:06] Error handling text editor change
["ERROR" - 21:52:06] Invalid version
Error: Invalid version
    at t.isAboveV3 (/home/monteiro/.vscode/extensions/esbenp.prettier-vscode-11.0.0/dist/extension.js:1:25515)
    at t.default.getSelectors (/home/monteiro/.vscode/extensions/esbenp.prettier-vscode-11.0.0/dist/extension.js:1:11796)
    at t.default.handleActiveTextEditorChanged (/home/monteiro/.vscode/extensions/esbenp.prettier-vscode-11.0.0/dist/extension.js:1:11123)
["INFO" - 21:52:07] Using config file at /home/monteiro/codes/api-sonar/.prettierrc
["INFO" - 21:54:10] Using config file at /home/monteiro/codes/api-sonar/.prettierrc
["INFO" - 21:54:42] Using config file at /home/monteiro/codes/api-sonar/.prettierrc
["INFO" - 21:55:00] Using config file at /home/monteiro/codes/api-sonar/.prettierrc
["INFO" - 21:55:06] Formatting file:///home/monteiro/codes/api-sonar/src/controllers/auth.controller.ts
["INFO" - 21:55:06] Using config file at /home/monteiro/codes/api-sonar/.prettierrc
["INFO" - 21:55:06] PrettierInstance:
{
  "modulePath": "/home/monteiro/codes/api-sonar/node_modules/prettier/index.cjs",
  "messageResolvers": {},
  "version": "3.6.2"
}
["INFO" - 21:55:06] Using ignore file (if present) at /home/monteiro/codes/api-sonar/.prettierignore
["INFO" - 21:55:06] File Info:
{
  "ignored": false,
  "inferredParser": "typescript"
}
["INFO" - 21:55:06] Detected local configuration (i.e. .prettierrc or .editorconfig), VS Code configuration will not be used
["INFO" - 21:55:06] Prettier Options:
{
  "filepath": "/home/monteiro/codes/api-sonar/src/controllers/auth.controller.ts",
  "parser": "typescript",
  "singleQuote": true,
  "trailingComma": "all"
}
["ERROR" - 21:55:06] Error formatting document.
["ERROR" - 21:55:06] ',' expected. (215:28)
  213 |       },
  214 |       firebaseUid: result.firebaseUid,
> 215 |       tokenId:      idToken: result.idToken,
      |                            ^
  216 |       expiresIn: result.expiresIn,
  217 |     });
  218 |   }
SyntaxError: ',' expected. (215:28)
  213 |       },
  214 |       firebaseUid: result.firebaseUid,
> 215 |       tokenId:      idToken: result.idToken,
      |                            ^
  216 |       expiresIn: result.expiresIn,
  217 |     });
  218 |   }
    at S4 (file:///home/monteiro/codes/api-sonar/node_modules/prettier/plugins/typescript.mjs:17:72190)
    at Q4 (file:///home/monteiro/codes/api-sonar/node_modules/prettier/plugins/typescript.mjs:20:1042)
    at Object.e3 [as parse] (file:///home/monteiro/codes/api-sonar/node_modules/prettier/plugins/typescript.mjs:20:1584)
    at parse5 (file:///home/monteiro/codes/api-sonar/node_modules/prettier/index.mjs:16731:24)
    at async coreFormat (file:///home/monteiro/codes/api-sonar/node_modules/prettier/index.mjs:17287:25)
    at async formatWithCursor (file:///home/monteiro/codes/api-sonar/node_modules/prettier/index.mjs:17504:14)
    at async Module.format2 (file:///home/monteiro/codes/api-sonar/node_modules/prettier/index.mjs:19051:25)
["INFO" - 21:55:06] Formatting completed in 127ms.
["INFO" - 21:55:16] Formatting file:///home/monteiro/codes/api-sonar/src/controllers/auth.controller.ts
["INFO" - 21:55:16] Using config file at /home/monteiro/codes/api-sonar/.prettierrc
["INFO" - 21:55:16] PrettierInstance:
{
  "modulePath": "/home/monteiro/codes/api-sonar/node_modules/prettier/index.cjs",
  "messageResolvers": {},
  "version": "3.6.2"
}
["INFO" - 21:55:16] Using ignore file (if present) at /home/monteiro/codes/api-sonar/.prettierignore
["INFO" - 21:55:16] File Info:
{
  "ignored": false,
  "inferredParser": "typescript"
}
["INFO" - 21:55:16] Detected local configuration (i.e. .prettierrc or .editorconfig), VS Code configuration will not be used
["INFO" - 21:55:16] Prettier Options:
{
  "filepath": "/home/monteiro/codes/api-sonar/src/controllers/auth.controller.ts",
  "parser": "typescript",
  "singleQuote": true,
  "trailingComma": "all"
}
["INFO" - 21:55:17] Formatting completed in 90ms.
